--- a/nodeJS/first-project-node/package.json
+++ b/nodeJS/first-project-node/package.json
@@ -4,11 +4,14 @@
   "description": "primeiro projeto node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "author": "Marcelo Luiz",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
