--- a/nodeJS/first-project-node/package.json
+++ b/nodeJS/first-project-node/package.json
@@ -9,8 +9,7 @@
   "author": "Marcelo Luiz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
-    "uuid": "^8.3.2"
+    "express": "^4.17.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
