--- a/reactJS/iniciando-projeto-react-vite/first-project-react/package.json
+++ b/reactJS/iniciando-projeto-react-vite/first-project-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-project-react",
+  "name": "first-project-react-vite",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
