--- a/reactJS/estrutura-html-projeto/react-project/package.json
+++ b/reactJS/estrutura-html-projeto/react-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-login",
+  "name": "react-project",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -16,6 +16,6 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.5"
+    "vite": "^2.9.9"
   }
 }
