add to show user in setUsers

--- a/nodeJS/first-project-node/package.json
+++ b/nodeJS/first-project-node/package.json
@@ -4,7 +4,7 @@
   "description": "primeiro projeto node",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "dev": "nodemon"
   },
   "author": "Marcelo Luiz",
   "license": "ISC",
