--- a/nodeJS/first-project-node/package.json
+++ b/nodeJS/first-project-node/package.json
@@ -4,6 +4,7 @@
   "description": "primeiro projeto node",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "dev": "nodemon"
   },
   "author": "Marcelo Luiz",
