--- a/reactJS/2-continuando-aplicação-react/4-useEffect/react-project/package.json
+++ b/reactJS/2-continuando-aplicação-react/4-useEffect/react-project/package.json
@@ -12,7 +12,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
