--- a/reactJS/2-continuando-aplicação-react/6-iniciando-segunda-tela-react-router/react-project/package.json
+++ b/reactJS/2-continuando-aplicação-react/6-iniciando-segunda-tela-react-router/react-project/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "5",
+    "react-router-dom": "^5.3.3",
     "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2"
   },
